--- a/client/styles/footer.css
+++ b/client/styles/footer.css
@@ -1,34 +1,8 @@
-* {
-    margin: 0px;
-    padding: 0px;
-}
-
-html, body {
-    height: 0vh;
-    margin: 0;
-}
-
-.app-container {
+.footer{
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-self: flex-end;
-}
-
-.main-content {
-    flex: 1;
-}
-
-.footer {
-    background: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0px;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-}
-
-.footer p {
-    margin: 0;
+    background-color: black;
+    color: antiquewhite;
+    justify-content: space-evenly;
+    padding: 1em;
 }
