--- a/client/styles/login.css
+++ b/client/styles/login.css
@@ -3,67 +3,67 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
+}
+
+.loginDiv h1{
+    padding: 1em;
 }
 
 .loginForm{
+    margin: 2em;
+    padding: 2em;
     background-color: whitesmoke;
     width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 60vh;
     justify-content: space-evenly;
-    box-shadow: 2px 4px 6px black;
+    box-shadow: 8px 6px 10px black;
+    border: 1px dotted grey;
 }
 
-.loginInput{
-    padding: 2vh;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 40vh;
-}
-
-.designForForm{
-    background-color: white;
-    border: 1px solid grey;
-    height: 5vh;
-    font-size: 2vh;
-}
-.designForFormInput{
-    background-color: white;
+.loginForm input {
     border: 1px solid grey;
 }
 
-.loginSpan{
-    display: flex;
-    align-items: flex-start;
+.alert-visible {
+    display: block;
+    animation: fadeIn 4s ease-in 0s 1;
+  }
+
+.alert-hidden {
+    display: none;
+}
+  
+@keyframes fadeIn {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}  
+
+#loader{
+    background-color: black;
+    padding: 1em;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+
 }
 
-@media (min-width: 800px) {
-    .loginSpan{
-        width: 70vh;
-    }
-    .designForFormInput{
-        width: 70vh;
-    }
-    .designForForm{
-        width: 70vh;
-    }
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2); 
+    backdrop-filter: blur(3px); 
+    z-index: 9999; 
 }
 
-#loginButton{
-    padding: 1vh 3vh;
-    font-size: 4vh;
-    background-color: rgb(20, 143, 192);
-    border: 0cap;
-    border-radius: 1vh;
-    color: white;
-    box-shadow: 2px 4px 4px black;
-    transition: 0.2s ease;
-}
-#loginButton:hover{
-    cursor: pointer;
-    box-shadow: 0px 0px 0px white;
-    background-color: aqua;
-}
