--- a/client/styles/navbar.css
+++ b/client/styles/navbar.css
@@ -1,19 +1,41 @@
-#navbar{
-    color: aliceblue;
-    text-decoration: none;
+@keyframes fillcolor {
+    0%{
+        height: 0%;
+        background-color: black;
+    }
+    100%{
+        height: 100%;
+        background-color: 0%;
+    }
+}
 
+#navbar{
+    background-color: black;
+    text-decoration: none;
+    padding: 0%;
+    animation: fillcolor 1s none 0s 1 alternate-reverse;
 }
 
 #navbar-nav{
     display: flex;
     justify-items: center;
+    animation: fillcolor 1s none 0s 1;
+}
+
+#navbar-brand{
+    background-color: aliceblue;
+    width: 50%;
+    padding: 0.5em;
+    animation: fillcolor 1s none 0s 1 alternate-reverse;
+}
+
+#container-fluid{
+    padding: 0%;
+    background-color: black;
 }
 
 #profileButton{
     background-color: transparent;
-    color: aliceblue;
-    margin: 0%;
-    padding: 0%;
     border: none;
 }
 
@@ -32,3 +54,23 @@
 #hide{
     display: none;
 }
+
+.profileImageSpan{
+    background-color: black;
+    display: block;
+    margin: 1rem auto;
+    height: 9rem;
+    width: 9rem;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profileImageSpan img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;  
+}
+
